# ms_coupon_tauri_rust

./: README.md  package.json  splash.html
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: custom.rs
src-tauri/src/menu/: custom.rs  entry.rs  event.rs  mod.rs  native.rs
src/utils/mt/guard/: encrypt.js  index.js
